--- a/com.mzeat/res/layout/listitem_my_share.xml
+++ b/com.mzeat/res/layout/listitem_my_share.xml
@@ -2,29 +2,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="15dp" >
+    android:orientation="vertical" >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/my_share"
         android:layout_marginBottom="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/my_share"
         android:textAppearance="@style/Textcolor.SomberSmall" />
 
     <TextView
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="25dp"
         android:maxLines="3"
-         android:layout_marginBottom="5dp"
-        android:textAppearance="@style/Textcolor.SomberSmall" />
+        android:textAppearance="@style/Textcolor.BlackMedium" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="15dp"
         android:text="@string/havecomment"
-       
         android:textAppearance="@style/Textcolor.SomberSmall" />
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray" />
 
 </LinearLayout>
