--- a/com.mzeat/res/layout/poster_item.xml
+++ b/com.mzeat/res/layout/poster_item.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:gravity="center" >
 
-    <ImageView
-        android:id="@+id/imageView_poster"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:background="@drawable/empty_image"
-        android:scaleType="centerCrop" />
+    <ProgressBar
+        android:id="@+id/imagezoomdialog_progress"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 
 </LinearLayout>
