--- a/com.mzeat/res/layout/activity_editacount.xml
+++ b/com.mzeat/res/layout/activity_editacount.xml
@@ -9,7 +9,15 @@
         android:layout_height="wrap_content"
         layout="@layout/title_edituserinfo" />
 
-    <LinearLayout
+    <ScrollView android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <LinearLayout android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            
+            
+            <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
@@ -312,6 +320,10 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/selector_saveinfo" />
+        </LinearLayout>
+    </ScrollView>
+    
 
 </LinearLayout>
