--- a/com.mzeat/res/layout/activity_pubshare.xml
+++ b/com.mzeat/res/layout/activity_pubshare.xml
@@ -94,42 +94,47 @@
         </LinearLayout>
     </HorizontalScrollView>
 
-    <RelativeLayout
-        android:id="@+id/rl_content"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/hs_img"
-        android:layout_below="@id/rl_top"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:padding="10dp" >
+        android:layout_below="@id/rl_top" >
 
-        <EditText
-            android:id="@+id/et_title"
+        <RelativeLayout
+            android:id="@+id/rl_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:background="@null"
-            android:gravity="left|top"
-            android:hint="@string/hint_pubsharetitle"
-            android:inputType="textMultiLine"
-            android:maxLines="3"
-            android:scrollbars="vertical"
-            android:singleLine="false"
-            android:textAppearance="@style/Textcolor.SomberMedium"
-            android:visibility="gone" />
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:padding="10dp" >
 
-        <EditText
-            android:id="@+id/et_content"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_below="@id/et_title"
-            android:background="@null"
-            android:gravity="left|top"
-            android:hint="@string/hint_pubshare"
-            android:inputType="textMultiLine"
-            android:scrollbars="vertical"
-            android:textAppearance="@style/Textcolor.SomberMedium" />
-    </RelativeLayout>
+            <EditText
+                android:id="@+id/et_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:background="@null"
+                android:gravity="left|top"
+                android:hint="@string/hint_pubsharetitle"
+                android:inputType="textMultiLine"
+                android:maxLines="3"
+                android:scrollbars="vertical"
+                android:singleLine="false"
+                android:textAppearance="@style/Textcolor.SomberMedium"
+                android:visibility="gone" />
+
+            <EditText
+                android:id="@+id/et_content"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_below="@id/et_title"
+                android:background="@null"
+                android:gravity="left|top"
+                android:hint="@string/hint_pubshare"
+                android:inputType="textMultiLine"
+                android:scrollbars="vertical"
+                android:textAppearance="@style/Textcolor.SomberMedium" />
+        </RelativeLayout>
+    </ScrollView>
 
 </RelativeLayout>
