--- a/com.mzeat/res/layout/activity_login.xml
+++ b/com.mzeat/res/layout/activity_login.xml
@@ -90,6 +90,7 @@
         android:background="@drawable/selector_nowlogin" />
 
     <RelativeLayout
+        android:id="@+id/rl_qq"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
