--- a/com.mzeat/res/layout/activity_message.xml
+++ b/com.mzeat/res/layout/activity_message.xml
@@ -9,9 +9,15 @@
         android:layout_height="wrap_content"
         layout="@layout/title_edituserinfo" />
 
-    <ScrollView
+    <com.handmark.pulltorefresh.library.PullToRefreshScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:ptr="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/sl_message"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        ptr:ptrMode="pullDownFromTop"
+         ptr:ptrAnimationStyle="flip"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,7 +32,8 @@
                 android:divider="#00000000"
                 android:dividerHeight="0dp" >
             </com.mzeat.ui.widget.MyListView>
-             <com.mzeat.ui.widget.MyListView
+
+            <com.mzeat.ui.widget.MyListView
                 android:id="@+id/lv_my_comment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -35,5 +42,6 @@
                 android:dividerHeight="0dp" >
             </com.mzeat.ui.widget.MyListView>
         </LinearLayout>
-    </ScrollView>
+    </com.handmark.pulltorefresh.library.PullToRefreshScrollView>
+
 </LinearLayout>
