--- a/com.mzeat/res/layout/activity_shopcart.xml
+++ b/com.mzeat/res/layout/activity_shopcart.xml
@@ -10,7 +10,35 @@
         android:layout_height="wrap_content"
         layout="@layout/title_mycart" />
 
-    <RelativeLayout
+    <LinearLayout
+        android:layout_below="@id/ll_title"
+        android:id="@+id/ll_tips"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone" >
+
+        <LinearLayout
+            android:id="@+id/ll_gotoprivilege"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="100dp"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/tips_cart" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/tips_cart" />
+        </LinearLayout>
+    </LinearLayout>
+    <RelativeLayout
         android:id="@+id/ll_bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
