--- a/com.mzeat/res/drawable/selector_shop.xml
+++ b/com.mzeat/res/drawable/selector_shop.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/shop_normal" android:state_pressed="false"></item>
-    <item android:drawable="@drawable/shop_press" android:state_pressed="true"></item>
+    <item android:drawable="@drawable/sharepub_normal" android:state_pressed="false"></item>
+    <item android:drawable="@drawable/sharepub_press" android:state_pressed="true"></item>
 
 </selector>
