--- a/com.mzeat/res/layout/activity_confirmorder.xml
+++ b/com.mzeat/res/layout/activity_confirmorder.xml
@@ -19,14 +19,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
-<ListView
+
+            <com.mzeat.ui.widget.MyListView
                 android:id="@+id/lv_cart"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:cacheColorHint="#00000000"
                 android:divider="@color/gray"
                 android:dividerHeight="1dp" >
-            </ListView>
+            </com.mzeat.ui.widget.MyListView>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -34,11 +36,13 @@
                 android:padding="10dp" >
 
                 <EditText
+                    android:id="@+id/et_note"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@null"
                     android:hint="@string/tips_order"
                     android:inputType="textNoSuggestions"
+                    android:maxLines="3"
                     android:maxLength="1024"
                     android:textAppearance="@style/Textcolor.SomberMedium" />
             </LinearLayout>
@@ -47,8 +51,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/gray" />
-
-            
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -64,7 +66,7 @@
                     android:orientation="vertical" >
 
                     <RadioButton
-                        android:id="@+id/rg_zhifubao"
+                        android:id="@+id/rd_zhifubao"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
@@ -124,8 +126,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_toRightOf="@id/all_product_count"
-                    android:text="1000"
-                    android:textAppearance="@style/Textcolor.SomberMedium" />
+                  android:textAppearance="@style/Textcolor.RedMedium"/>
 
                 <TextView
                     android:id="@+id/should_pay"
@@ -143,8 +144,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_toRightOf="@id/should_pay"
-                    android:text="1000"
-                    android:textAppearance="@style/Textcolor.SomberMedium" />
+                   android:textAppearance="@style/Textcolor.RedMedium" />
             </RelativeLayout>
 
             <View
@@ -172,7 +172,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_toRightOf="@id/jifen_change"
-                    android:text="96积分"
+                  
                     android:textAppearance="@style/Textcolor.SomberMedium" />
             </RelativeLayout>
 
@@ -201,9 +201,9 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_toRightOf="@id/edit_mobile"
-                    android:digits="0123456789"
-                    android:hint="13800138000"
                     android:background="@null"
+                    android:digits="0123456789"
+                    android:hint="@string/tips_entermobile"
                     android:inputType="number"
                     android:maxLength="11"
                     android:textAppearance="@style/Textcolor.SomberMedium" />
@@ -213,7 +213,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/gray" />
-            
+
             <ImageButton
                 android:id="@+id/btn_contact"
                 android:layout_width="wrap_content"
