--- a/com.mzeat/res/layout/listitem_share.xml
+++ b/com.mzeat/res/layout/listitem_share.xml
@@ -8,8 +8,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-         />
+        android:layout_marginTop="10dp" />
 
     <TextView
         android:id="@+id/username"
@@ -31,9 +30,8 @@
         android:layout_alignParentRight="true"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
-        
         android:ellipsize="end"
         android:lines="1"
         android:text="12小时前"
@@ -47,9 +45,9 @@
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@id/img_user"
-        android:text="#安与骑兵的红山果#"
-        android:maxLines="4"
         android:ellipsize="end"
+        android:maxLines="4"
+        android:text="#安与骑兵的红山果#"
         android:textAppearance="@style/Textcolor.SomberSmall" />
 
     <HorizontalScrollView
@@ -59,8 +57,8 @@
         android:layout_below="@id/content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="10dp"
-        android:visibility="gone"
-        android:layout_toRightOf="@id/img_user" >
+        android:layout_toRightOf="@id/img_user"
+        android:visibility="gone" >
 
         <LinearLayout
             android:id="@+id/ll_img"
@@ -90,8 +88,8 @@
         android:layout_below="@id/content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="10dp"
-      android:scaleType="centerCrop"
-        android:layout_toRightOf="@id/img_user" >
+        android:layout_toRightOf="@id/img_user"
+        android:scaleType="centerCrop" >
     </ImageView>
 
     <RelativeLayout
@@ -99,15 +97,35 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
+        android:layout_below="@id/img_content"
         android:layout_marginBottom="10dp"
-        android:layout_below="@id/img_content" >
+        android:layout_marginRight="10dp" >
+
+        <TextView
+            android:id="@+id/sentfrom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="@string/sendfrom"
+            android:textAppearance="@style/Textcolor.SomberSmall"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/tv_sentfrom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/sentfrom"
+            android:textAppearance="@style/Textcolor.SomberSmall"
+            android:visibility="gone" />
 
         <ImageView
             android:id="@+id/img_saycount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/tv_sentfrom"
             android:background="@drawable/say" />
 
         <TextView
@@ -116,9 +134,6 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/img_saycount"
-            android:ellipsize="end"
-            android:lines="1"
-            android:text="12"
             android:textAppearance="@style/Textcolor.SomberSmall" />
     </RelativeLayout>
 
